--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "author": "Brad Traversy",
   "license": "MIT",
@@ -28,6 +30,11 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
     "nodemon": "^2.0.4"
   }
 }
