--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "bundly",
+  "name": "proshop",
   "version": "1.0.0",
   "description": "MERN shopping cart app",
   "main": "server.js",
   "type": "module",
+  
   "scripts": {
     "start": "node backend/server",
     "server": "nodemon backend/server",
@@ -11,18 +12,18 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "google-auth-library": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
@@ -30,11 +31,6 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.2.0",
-    "lint-staged": "^10.5.4",
     "nodemon": "^2.0.4"
   }
 }
