--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@iconify-icons/twemoji": "^1.1.1",
     "@iconify/icons-mdi": "^1.1.13",
+    "@iconify/icons-twemoji": "^1.1.1",
     "@iconify/react": "^1.1.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -53,7 +54,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
