--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "@iconify/icons-twemoji": "^1.1.1",
     "@sendgrid/mail": "^7.4.2",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
@@ -30,6 +31,7 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {
+    "@iconify/react": "^1.1.4",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4"
   }
