--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@iconify/icons-mdi": "^1.1.13",
     "@iconify/icons-twemoji": "^1.1.1",
     "@iconify/react": "^1.1.4",
+    "@optimizely/react-sdk": "^2.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
